--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ ENGIE_App/bin/Debug/
 ENGIE_App.Android/obj/Debug/90/
 ENGIE_App/obj/Debug/
 .vs/
-ENGIE_App.Android.csproj.user
+ENGIE_App.Android/ENGIE_App.Android.csproj.user
 ENGIE_App.Android/obj/
