Redesigned login page

--- a/ENGIE_App.Android/ENGIE_App.Android.csproj
+++ b/ENGIE_App.Android/ENGIE_App.Android.csproj
@@ -100,6 +100,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\test.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\engiewhite.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
