--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ ENGIE_App/obj/Debug/
 ENGIE_App.Android/ENGIE_App.Android.csproj.user
 ENGIE_App.Android/obj/
 ENGIE_App.iOS/obj/
-ENGIE_App.iOS/bin/Debug
+ENGIE_App.iOS/bin/iPhone/Debug
 ENGIE_App/obj/
