--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ ENGIE_App.Android/obj/
 ENGIE_App.iOS/obj/
 ENGIE_App.iOS/bin/iPhone/Debug
 ENGIE_App/obj/
+XamUiTest/bin/Debug/
+XamUiTest/obj/Debug/
