Updated to Lato font to follow ENGIE style guide

--- a/ENGIE_App.iOS/ENGIE_App.iOS.csproj
+++ b/ENGIE_App.iOS/ENGIE_App.iOS.csproj
@@ -68,6 +68,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <BundleResource Include="Resources\Lato-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\cameraicon.imageset\cameraicon.png">
