--- a/ENGIE_App.Android/ENGIE_App.Android.csproj
+++ b/ENGIE_App.Android/ENGIE_App.Android.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
+    <AndroidAsset Include="Assets\Lato-Regular.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
