--- a/ENGIE_App.iOS/Info.plist
+++ b/ENGIE_App.iOS/Info.plist
@@ -34,5 +34,9 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+  <key>UIAppFonts</key>
+  <array>
+    <string>Lato-Regular.ttf</string>
+  </array>
 </dict>
 </plist>
