--- a/XamUiTest/XamUiTest.csproj
+++ b/XamUiTest/XamUiTest.csproj
@@ -38,6 +38,7 @@
     <Compile Include="BaseTest.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
+    <Compile Include="Pages\MainPage.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="AppInitializer.cs" />
   </ItemGroup>
