--- a/XamUiTest/XamUiTest.csproj
+++ b/XamUiTest/XamUiTest.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
     <Compile Include="Pages\MainPage.cs" />
+    <Compile Include="Pages\MenuPage.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="AppInitializer.cs" />
   </ItemGroup>
