--- a/ENGIE_App.iOS/Info.plist
+++ b/ENGIE_App.iOS/Info.plist
@@ -34,9 +34,11 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
-  <key>UIAppFonts</key>
-  <array>
-    <string>Lato-Regular.ttf</string>
-  </array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Lato-Regular.ttf</string>
+	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This allows you to scan QR codes</string>
 </dict>
 </plist>
