Fix for admin icons hopefully

--- a/ENGIE_App.iOS/ENGIE_App.iOS.csproj
+++ b/ENGIE_App.iOS/ENGIE_App.iOS.csproj
@@ -71,6 +71,12 @@
     <BundleResource Include="Resources\Lato-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <ImageAsset Include="Assets.xcassets\adminicon.imageset\adminicon.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\adminiconsmall.imageset\adminiconsmall.png">
+      <Visible>false</Visible>
+    </ImageAsset>
     <ImageAsset Include="Assets.xcassets\cameraicon.imageset\cameraicon.png">
       <Visible>false</Visible>
     </ImageAsset>
@@ -111,6 +117,12 @@
       <Visible>false</Visible>
     </ImageAsset>
     <ImageAsset Include="Assets.xcassets\homeicon.imageset\homeicon.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\adminicon.imageset\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\adminiconsmall.imageset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
     <ImageAsset Include="Assets.xcassets\logouticon.imageset\Contents.json">
