--- a/ENGIE_App/ENGIE_App.csproj
+++ b/ENGIE_App/ENGIE_App.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="1.2.1" />
+    <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="SkiaSharp" Version="2.80.2" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
