--- a/ENGIE_App/ENGIE_App.csproj
+++ b/ENGIE_App/ENGIE_App.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="views\GlobalVariables.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.10.1" />
+    <PackageReference Include="MimeKit" Version="2.10.1" />
     <PackageReference Include="MySqlConnector" Version="1.2.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
