--- a/ENGIE_App/ENGIE_App.csproj
+++ b/ENGIE_App/ENGIE_App.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="MailKit" Version="2.10.1" />
     <PackageReference Include="MimeKit" Version="2.10.1" />
     <PackageReference Include="MySqlConnector" Version="1.2.1" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
     <PackageReference Include="SkiaSharp" Version="2.80.2" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
