RCD form added with PDF working for ios

--- a/ENGIE_App.iOS/ENGIE_App.iOS.csproj
+++ b/ENGIE_App.iOS/ENGIE_App.iOS.csproj
@@ -69,6 +69,8 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <BundleResource Include="Resources\Lato-Regular.ttf" />
+    <Compile Include="SaveiOS.cs" />
+    <Compile Include="PreviewController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\adminicon.imageset\adminicon.png">
