--- a/ENGIE_App/ENGIE_App.csproj
+++ b/ENGIE_App/ENGIE_App.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="3.0.0-beta5" />
+    <PackageReference Include="Syncfusion.Xamarin.Pdf" Version="18.4.0.35" />
   </ItemGroup>
 
   <ItemGroup>
