--- a/ENGIE_App/ENGIE_App.csproj
+++ b/ENGIE_App/ENGIE_App.csproj
@@ -15,6 +15,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="RCDTestSheet.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="RCDTestSheet.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MailKit" Version="2.10.1" />
     <PackageReference Include="MimeKit" Version="2.10.1" />
     <PackageReference Include="MySqlConnector" Version="1.2.1" />
