--- a/ENGIE_App.iOS/ENGIE_App.iOS.csproj
+++ b/ENGIE_App.iOS/ENGIE_App.iOS.csproj
@@ -69,8 +69,16 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <BundleResource Include="Resources\Lato-Regular.ttf" />
+    <Compile Include="SaveiOS.cs" />
+    <Compile Include="PreviewController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ImageAsset Include="Assets.xcassets\adminicon.imageset\adminicon.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\adminiconsmall.imageset\adminiconsmall.png">
+      <Visible>false</Visible>
+    </ImageAsset>
     <ImageAsset Include="Assets.xcassets\cameraicon.imageset\cameraicon.png">
       <Visible>false</Visible>
     </ImageAsset>
@@ -111,6 +119,12 @@
       <Visible>false</Visible>
     </ImageAsset>
     <ImageAsset Include="Assets.xcassets\homeicon.imageset\homeicon.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\adminicon.imageset\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\adminiconsmall.imageset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
     <ImageAsset Include="Assets.xcassets\logouticon.imageset\Contents.json">
@@ -177,11 +191,14 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="ZXing.Net.Mobile.Forms">
+      <Version>3.0.0-beta5</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\ENGIE_App\ENGIE_App.csproj">
-      <Project>{7A3B5881-E5C3-4047-A6B3-A2A43E798B66}</Project>
+      <Project>{898FB519-8497-4A47-B1E2-4C2308CE4A02}</Project>
       <Name>ENGIE_App</Name>
     </ProjectReference>
   </ItemGroup>
